--- a/com.cn.mcdonalds.www/项目/index.html
+++ b/com.cn.mcdonalds.www/项目/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- 顶部 -->
     <div class="title">
         <div class="title-left">
             <img src="./img/anniu.png" alt="">
@@ -17,14 +18,18 @@
         <div class="title-right">
             <img src="./img/maidanglao.png" alt="">
         </div>
-        
     </div>
+    <!-- 内容 -->
     <div class="content">
         <div class="content-logo">
             <img src="./img/maizhong.jpg" alt="">
-
+            <h4>五大黑金新品，陪你到2020!</h4>
+            <p>2019.12.25</p>
         </div>
     </div>
+    <!-- 底部 -->
+    <!-- <div class="bottom">
+    </div> -->
 </body>
 
 </html>
