--- a/com.cn.mcdonalds.www/项目/index.html
+++ b/com.cn.mcdonalds.www/项目/index.html
@@ -23,8 +23,8 @@
     <div class="content">
         <div class="content-logo">
             <img src="./img/maizhong.jpg" alt="">
-            <h4>五大黑金新品，陪你到2020!</h4>
-            <p>2019.12.25</p>
+            <h4>首单双倍积分!2020新年好!</h4>
+            <p>2020.01.01</p>
         </div>
     </div>
     <!-- 底部 -->
