--- a/com.cn.mcdonalds.www/项目/index.html
+++ b/com.cn.mcdonalds.www/项目/index.html
@@ -23,8 +23,24 @@
     <div class="content">
         <div class="content-logo">
             <img src="./img/maizhong.jpg" alt="">
-            <h4>首单双倍积分!2020新年好!</h4>
-            <p>2020.01.01</p>
+        </div>
+        <div class="content-logotow">
+            <img src="./img/201912301321346850_640_480.jpg" alt="">
+            <img src="./img/201912301643021717.gif" alt="">
+        </div>
+        <!--  -->
+        <div class="content-logo">
+            <img src="./img/201912251804513818_640_398.jpg" alt="">
+        </div>
+        <div class="content-logotow">
+            <img src="./img/201912301333231535_640_480.jpg" alt="">
+            <img src="./img/201901221138028832_640_829.jpg" alt="">
+            <img src="./img/201901221137498093_640_829.jpg" alt="">
+            <img src="./img/201911290957094903_640_829.jpg" alt="">
+            <img src="./img/201908052201332280_640_829.jpg" alt="">
+            <img src="./img/201802121810004037_640_829.jpg" alt="">
+            <img src="./img/201907231919542046_640_829.jpg" alt="">
+            <img src="./img/201909171611211333.gif" alt="">
         </div>
     </div>
     <!-- 底部 -->
